cli/tests/testdata/workers/worker_nested_error.ts.out
[WILDCARD]error: Uncaught (in worker "bar") Error: foo[WILDCARD]
  throw new Error("foo");
        ^
    at foo ([WILDCARD]/workers/error.ts:[WILDCARD])
    at [WILDCARD]/workers/error.ts:[WILDCARD]
error: Uncaught (in worker "baz") (in promise) Error: Unhandled error event in child worker.
    at Worker.#pollControl ([WILDCARD])
error: Uncaught (in promise) Error: Unhandled error event in child worker.
    at Worker.#pollControl ([WILDCARD])
